[metadata]
name = django-extensions
version = attr: django_extensions.__version__
url = https://github.com/django-extensions/django-extensions
author = Michael Trier
author_email = mtrier@gmail.com
maintainer = Bas van Oostveen
maintainer_email = v.oostveen@gmail.com
description = Extensions for Django
long_description = file: README.rst
license = MIT License
platforms =
    any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
project_urls =
    Documentation = https://django-extensions.readthedocs.io/
    Source = https://github.com/django-extensions/django-extensions
    Changelog = https://github.com/django-extensions/django-extensions/blob/master/CHANGELOG.md

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
install_requires =
    Django >= 2.2
tests_require =
    Django
    Werkzeug
    factory-boy
    mock
    pytest
    pytest-cov
    pytest-django
    python-dateutil
    shortuuid
    tox
    vobject

[options.packages.find]
include =
    django_extensions

[flake8]
ignore = E128,E731,W503,W504
max-line-length = 512
exclude=venv/

[tool:pytest]
norecursedirs=venv* .tox .eggs build dist django_extensions.egg-info django_extensions/mongodb
addopts = --doctest-modules --doctest-ignore-import-errors --nomigrations

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_third_party = django
known_first_party = django_extensions
multi_line_output = 5
line_length=128

[pycodestyle]
count = False
max-line-length = 512
statistics = True
ignore = D100,D101,D102,D103,D104,D105,D106,D107,D202,D203,D205,D210,D212,D400,D406,D407,D412,D413
